Add data set export callback and enhance export functionality